Finished sections Word embeddings and Graph embeddings.

--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -26,6 +26,36 @@
 	url = {https://transacl.org/ojs/index.php/tacl/article/view/570},
 	pages = {211--225}
 }
+@inproceedings{Levy2014a,
+  address = {Baltimore, Maryland},
+  author = {Levy, Omer and Goldberg, Yoav},
+  biburl = {https://www.bibsonomy.org/bibtex/2c08ef42c3320976b65a9833180815f0e/gchrupala},
+  booktitle = {Proceedings of the 52nd Annual Meeting of the Association for Computational Linguistics (Volume 2: Short Papers)},
+  interhash = {ec04086ee882f28c71d67260e100f2e5},
+  intrahash = {c08ef42c3320976b65a9833180815f0e},
+  keywords = {imported},
+  month = {June},
+  pages = {302--308},
+  publisher = {Association for Computational Linguistics},
+  timestamp = {2014-12-13T13:16:07.000+0100},
+  title = {Dependency-Based Word Embeddings},
+  url = {http://www.aclweb.org/anthology/P14-2050},
+  year = 2014
+}
+@inproceedings{Levy2014,
+ author = {Levy, Omer and Goldberg, Yoav},
+ title = {Neural Word Embedding As Implicit Matrix Factorization},
+ booktitle = {Proceedings of the 27th International Conference on Neural Information Processing Systems},
+ series = {NIPS'14},
+ year = {2014},
+ location = {Montreal, Canada},
+ pages = {2177--2185},
+ numpages = {9},
+ url = {http://dl.acm.org/citation.cfm?id=2969033.2969070},
+ acmid = {2969070},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
+} 
 % skip-gram for phrases
 @article{Mikolov2013a,
   author    = {Tomas Mikolov and
@@ -43,7 +73,7 @@
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 % explanation for skip-gram model
-@article{Goldberg14,
+@article{Goldberg2014,
   author    = {Yoav Goldberg and
                Omer Levy},
   title     = {word2vec Explained: deriving Mikolov et al.'s negative-sampling word-embedding
@@ -54,6 +84,17 @@
   url       = {http://arxiv.org/abs/1402.3722},
   timestamp = {Wed, 05 Mar 2014 14:43:44 +0100},
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/GoldbergL14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+@article{Rong2014,
+  author    = {Xin Rong},
+  title     = {word2vec Parameter Learning Explained},
+  journal   = {CoRR},
+  volume    = {abs/1411.2738},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1411.2738},
+  timestamp = {Mon, 01 Dec 2014 14:32:13 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/Rong14},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 % more on Skip-gram modeling
@@ -88,7 +129,20 @@ isbn="978-3-319-46523-4",
 doi="10.1007/978-3-319-46523-4_30",
 url="http://dx.doi.org/10.1007/978-3-319-46523-4_30"
 }
-
+% deep walk
+@article{Perozzi2014,
+  author    = {Bryan Perozzi and
+               Rami Al{-}Rfou and
+               Steven Skiena},
+  title     = {DeepWalk: Online Learning of Social Representations},
+  journal   = {CoRR},
+  volume    = {abs/1403.6652},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1403.6652},
+  timestamp = {Tue, 01 Apr 2014 11:56:46 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/PerozziAS14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
 % deep neural network for graph representation
 @inproceedings{Cao2016,
   added-at = {2016-04-21T00:00:00.000+0200},
