Added section Introduction to neural networks.

--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -1,3 +1,17 @@
+% neural network introduction
+@book{Nielsen2017,
+  author={Nielsen, Michael},
+  year={2017},
+  title={Neural Networks and Deep Learning},
+  url={http://neuralnetworksanddeeplearning.com/}
+}
+% ""
+@book{Kriesel2005,
+  author={Kriesel, David},
+  year={2005},
+  title={A Brief Introduction to Neural Networks},
+  url={http://www.dkriesel.com/_media/science/neuronalenetze-en-zeta2-2col-dkrieselcom.pdf},
+}
 % Word embeddings main paper
 @article{Mikolov2013,
   author    = {Tomas Mikolov and
