Added section Introduction.

--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -12,6 +12,48 @@
   title={A Brief Introduction to Neural Networks},
   url={http://www.dkriesel.com/_media/science/neuronalenetze-en-zeta2-2col-dkrieselcom.pdf},
 }
+% examples for nns
+@article{Kalchbrenner2014,
+  author    = {Nal Kalchbrenner and
+               Edward Grefenstette and
+               Phil Blunsom},
+  title     = {A Convolutional Neural Network for Modelling Sentences},
+  journal   = {CoRR},
+  volume    = {abs/1404.2188},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1404.2188},
+  timestamp = {Thu, 01 May 2014 14:56:20 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/KalchbrennerGB14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+@inproceedings{Arisoy2012,
+ author = {Arisoy, Ebru and Sainath, Tara N. and Kingsbury, Brian and Ramabhadran, Bhuvana},
+ title = {Deep Neural Network Language Models},
+ booktitle = {Proceedings of the NAACL-HLT 2012 Workshop: Will We Ever Really Replace the N-gram Model? On the Future of Language Modeling for HLT},
+ series = {WLM '12},
+ year = {2012},
+ location = {Montreal, Canada},
+ pages = {20--28},
+ numpages = {9},
+ url = {http://dl.acm.org/citation.cfm?id=2390940.2390943},
+ acmid = {2390943},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+}
+@article{Gregor2015,
+  author    = {Karol Gregor and
+               Ivo Danihelka and
+               Alex Graves and
+               Daan Wierstra},
+  title     = {{DRAW:} {A} Recurrent Neural Network For Image Generation},
+  journal   = {CoRR},
+  volume    = {abs/1502.04623},
+  year      = {2015},
+  url       = {http://arxiv.org/abs/1502.04623},
+  timestamp = {Mon, 02 Mar 2015 14:17:34 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/GregorDGW15},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
 % Word embeddings main paper
 @article{Mikolov2013,
   author    = {Tomas Mikolov and
