--- a/thesis/foundations.ltx
+++ b/thesis/foundations.ltx
@@ -7,10 +7,10 @@ because different editors can validate and correct occurring errors.
 However, Wikidata, like most knowledge bases, is incomplete and therefore has to be operated under the \textit{Open World Assumption} (OWA).
 OWA states that if a statement is not contained in a knowledge base, it is not necessarily false but rather unknown \cite{Galarraga2016}.
 
-In Wikidata items and properties exist. Items are the aforementioned concepts, objects, etc. While properties are used to make claims about
+In Wikidata items and properties exist. Items are the aforementioned concepts, objects, etc. Properties are used to make claims about
 items, e.g. \textit{photographic film (Q6293)} is a \textit{subclass of (P279)} \textit{data storage device (Q193395)} (see Figure~\ref{fig:class example}).
 Each item and property has an unique identifier, which starts with the letter Q for items and the letter P for properties and is followed by a numeric code.
-The identifiers in Wikidata are essential to avoid ambiguity and to make items and properties multilingual.
+The identifiers in Wikidata are essential to avoid ambiguity and make items and properties multilingual.
 
 Items consist of labels, aliases and descriptions in different languages. 
 Sitelinks connect items to their corresponding pages of Wikimedia projects like Wikipedia articles.
