--- a/thesis/introduction.ltx
+++ b/thesis/introduction.ltx
@@ -1,26 +1,38 @@
-\textbf{TODO: Motivation.  Related work. Justify novelty. Solution. Evaluation.}
+Knowledge bases (KB) like DBpedia, YAGO and Wikidata try to store information about every significant entity in the real word and the relations between those entities.
+Using different approaches like human collaboration in Wikidata or information from Wikipedia databoxes in YAGO, these knowledge bases are populated \cite{Galagarra2016}.
+The issue of incompleteness arises in this context, as it is not realistic to assume that every bit of knowledge can and should be captured in the KBs.
+Ontologies are necessary for modeling, sharing, and exchanging knowledge \cite{Hazman2011}, and are therefore integral in the functioning of a knowledge base \cite{Wong2012}.
+They provide data schemas, concept vocabularies and rules \cite{Maedche2001} to which a KB has to adhere.
+Therefore, it should be a priority to ensure the completeness of the ontology in a KB.
+Types of ontologies range from lightweight ontologies like glossaries and taxonomies (concept hierarchies) to heavyweight ontologies like data models and description logics
+\cite{Wong2012}.
+
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{images/introduction/example_taxonomy.pdf}
+\caption{Classification of orphan class in Wikidata's taxonomy}
+\label{fig:problem example}
+\end{figure}
+In this work, the taxonomy of Wikidata is considered as case example, as it provides a high number of entities (\textbf{check number of entities} in \dumpdate{}).
+and a high degree of ''correctness'', since human editors constantly curate the existing knowledge.
+In a complete taxonomy, a single root class exists, which is considered the most general concept \cite{Cimiano2006}. All other classes should therefore have a superclass.
+Wikidata's taxonomy is incomplete in regards to this criteria. Superclass-less non-root classes are called orphan classes.
+This work focuses on developing a hybrid algorithm for classification of orphan classes to reduce the incompleteness of taxonomies.
+In Figure~\ref{fig:problem example}, a small section of Wikidata's taxonomy is shown. The orphan class \textit{reversal film} can be classified as a subclass of 
+\textit{photographic film}.
+The algorithm will use a neural network approach. This is motivated by the effectiveness of neural networks in other context-sensitive tasks
+like language processing \cite{Mikolov2013} \cite{Kalchbrenner2014} \cite{Arisoy2012}, graph representation \cite{Cao2016}, image generation \cite{Gregor2015} etc.
+Especially interesting are neural word embeddings \cite{Mikolov2013}, which have been used to great effect in the task of generating concept hierarchies by
+\fullcite{Fu2014}. Different approaches in using neural word embeddings for classification of orphan classes will be considered and evaluated in this work.
 
 The thesis is structured as follows.
-\textbf{TODO: apply changes of outline to this paragraph}
-Section~\ref{section:foundations} defines the concepts related to Wikidata, taxonomies, similarity measures
-and k-nearest-neighbors classification. Subsequently, the problem statement is formalized and its corresponding
-challenges listed.
-Section~\ref{section:neural networks} explains the notion of neural networks at
-the example of a simple feedforward network with backpropagation.
-Subsequently, neural networks for graph and word representation are compared
-in regards to suitability in the problem's context.
-Section~\ref{section:ontology learning} compares the problem, solved by the thesis, to related work
-in the field of ontology learning. The problem is classified and solutions to similar problems analyzed.
+In Section~\ref{section:foundations} the problem will be formally defined and related work in the fields of neural networks and ontology learning discussed for the use in this work.
+Section~\ref{section:neural networks} introduces the notion of neural networks and discusses work dealing with neural word and graph embeddings.
+Section~\ref{section:ontology learning} compares the problem, solved by the thesis, to related work in the field of ontology learning. 
+The problem is classified and solutions to similar problems analyzed.
 The novelty of the work is justified.
-Section~\ref{section:taxonomy analysis} presents the results of the analysis of Wikidata's taxonomy.
-Characteristics of unlinked classes are identified, and a specific subset of unlinked classes chosen,
-which fulfills necessary requirements as input for an algorithm.
-Section~\ref{section:algorithm} describes the developed baseline algorithm, which combines
-Word2Vec by \fullcite{Mikolov2013} and k-nearest-neighbors.
-Possible variations of the algorithm are presented and compared in regards to possible gains and problems. 
-One of these variations is also implemented for evaluation purposes.
+Section~\ref{section:taxonomy analysis} presents the Wikidata data set used as case example for the implementation and evaluation of the proposed hybrid algorithm. 
+Section~\ref{section:algorithm} describes the components of the developed baseline algorithm and variations, which potentially improve the effectiveness of the method.
 Section~\ref{section:evaluation} describes the evaluation methodology and presents the results.
-The baseline algorithm, using multiple different sets of different hyperparameters,  and a variation of it will be compared.
-Section~\ref{section:conclusion} summarizes the results of the thesis and lists possible future work,
-which could extend upon it.
+The baseline algorithm and proposed improvements are evaluated.
 
